fix(frontend): Adjust sidemenu sizes, give z-index to dialog
Adjusted the font-sizes to match the designs more, and gave a `z-index` to the dialog so that it appears on top of the side-menu. not underneath it.

--- a/client/src/map/orbs/mySupplyLynk/checkbox-filters/checkbox-filters.module.css
+++ b/client/src/map/orbs/mySupplyLynk/checkbox-filters/checkbox-filters.module.css
@@ -5,6 +5,7 @@
 .label {
   display: flex;
   align-items: center;
+  font-size: 0.8rem;
 }
 
 .iconWrapper {
